--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>HELLO AMABASSADOR</h1>
-  <h1>HOW ARE YOU TODAY?</h1>
+  <h1 class="que" >HOW ARE YOU TODAY?</h1>
 </body>
 </html>
+ 
