--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>HELLO AMABASSADOR</h1>
-  <h1 class="que">HOW ARE YOU TODAY?</h1>
+  <h1>HELLO AMABASSADOR!</h1>
+  <h1 class="blue">HOW ARE YOU TODAY?</h1>
 </body>
 </html>
  
